--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
 nav {
+    display: flex;
     align-items: center;
     justify-content: space-between;
 }
@@ -9,4 +10,8 @@ nav {
     border: solid black;
     border-width: 0.5vh;
     background-color: blue;
+}
+img{
+    width: 10vw;
+    height: 10vh;
 }
